Fixed text wrapping for input fields
Text will now wrap to the next line if it would exceed the width of the input field. The JSON will still only separate these lines if a definitive line break exists in the text.

--- a/nvcs-client/src/index.css
+++ b/nvcs-client/src/index.css
@@ -340,7 +340,7 @@ dialog:not([open]) {
   height: fit-content;
   margin: 0;
   padding: 5px;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 
 .dialog .input-container input[type='checkbox'] {
